extends TextureRect


func _gui_input(event: InputEvent) -> void:
	print(event)
	pass # Replace with function body.



func _on_button_pressed() -> void:
	print("555")
	pass # Replace with function body.


func _on_button_2_pressed() -> void:
	print("666")
	pass # Replace with function body.


func _on_button_toggled(toggled_on: bool) -> void:
	pass # Replace with function body.
